Update GitHub profile link in index.html

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                                 <span class="btn-icon">💼</span>
                                 LinkedIn Profile
                             </a>
-                            <a href="https://github.com/gajananbarve" class="link-btn primary" target="_blank">
+                            <a href="https://github.com/thebenmerlin" class="link-btn primary" target="_blank">
                                 <span class="btn-icon">💻</span>
                                 GitHub Profile
                             </a>
