Update links to research publications and resume

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                     <div class="link-category bloomberg-style">
                         <h3>Professional Resources</h3>
                         <div class="link-buttons">
-                            <a href="links/resume.pdf" class="link-btn primary" target="_blank">
+                            <a href="https://github.com/thebenmerlin/certificates/blob/main/Gajanan_Barve.pdf" class="link-btn primary" target="_blank">
                                 <span class="btn-icon">📄</span>
                                 Download Resume
                             </a>
@@ -483,11 +483,11 @@
                     <div class="link-category nyt-style">
                         <h3>Research Publications</h3>
                         <div class="link-buttons">
-                            <a href="links/wind-turbine-research.pdf" class="link-btn secondary" target="_blank">
+                            <a href="https://github.com/thebenmerlin/certificates/blob/main/Wind%20Turbine%20ElecMotors%20Paper.pdf" class="link-btn secondary" target="_blank">
                                 <span class="btn-icon">📚</span>
                                 Wind Turbine Performance Research
                             </a>
-                            <a href="links/power-allocation-algorithm.pdf" class="link-btn secondary" target="_blank">
+                            <a href="https://github.com/thebenmerlin/certificates/blob/main/Math%20Quantified%20.pdf" class="link-btn secondary" target="_blank">
                                 <span class="btn-icon">📚</span>
                                 Power Allocation Algorithm
                             </a>
@@ -495,11 +495,11 @@
                                 <span class="btn-icon">📚</span>
                                 AI and Copyright Law Analysis
                             </a>
-                            <a href="links/smart-city-governance.pdf" class="link-btn secondary" target="_blank">
+                            <a href="https://github.com/thebenmerlin/certificates/blob/main/Gajanan%20Barve%20Fermi%20Estimation.pdf" class="link-btn secondary" target="_blank">
                                 <span class="btn-icon">📚</span>
                                 Smart City Governance
                             </a>
-                            <a href="links/securities-lending-innovation.pdf" class="link-btn secondary" target="_blank">
+                            <a href="https://github.com/thebenmerlin/certificates/blob/main/Merlin%20Capital.pdf" class="link-btn secondary" target="_blank">
                                 <span class="btn-icon">📚</span>
                                 Securities Lending Innovation
                             </a>
