Update links to certificates and published books

--- a/index.html
+++ b/index.html
@@ -513,19 +513,19 @@
                     <div class="link-category bloomberg-style">
                         <h3>Published Books</h3>
                         <div class="link-buttons">
-                            <a href="links/bloodthirsty-hayden-fox-1.pdf" class="link-btn primary" target="_blank">
+                            <a href="https://amzn.eu/d/bJ7OaOk" class="link-btn primary" target="_blank">
                                 <span class="btn-icon">📖</span>
                                 Bloodthirsty: Hayden Fox 1
                             </a>
-                            <a href="links/carnage-hayden-fox-2.pdf" class="link-btn primary" target="_blank">
+                            <a href="https://amzn.eu/d/bJ7OaOk" class="link-btn primary" target="_blank">
                                 <span class="btn-icon">📖</span>
                                 Carnage: Hayden Fox 2
                             </a>
-                            <a href="links/ash-and-ashes.pdf" class="link-btn primary" target="_blank">
+                            <a href="https://amzn.eu/d/bJ7OaOk" class="link-btn primary" target="_blank">
                                 <span class="btn-icon">📖</span>
                                 Ash and Ashes
                             </a>
-                            <a href="links/pune-novel.pdf" class="link-btn primary" target="_blank">
+                            <a href="https://amzn.eu/d/bJ7OaOk" class="link-btn primary" target="_blank">
                                 <span class="btn-icon">📖</span>
                                 Pune
                             </a>
@@ -538,27 +538,27 @@
                             <div class="certification-item">
                                 <h4>Critical Thinking & Problem Solving</h4>
                                 <p>Rochester Institute of Technology | Jul 2025</p>
-                                <a href="links/cert-critical-thinking.pdf" target="_blank">View Certificate</a>
+                                <a href="https://courses.edx.org/certificates/28fc890ce3204c8bba363f9cd042acba" target="_blank">View Certificate</a>
                             </div>
                             <div class="certification-item">
                                 <h4>Data Analytics</h4>
                                 <p>IBM | Mar 2024</p>
-                                <a href="links/cert-data-analytics.pdf" target="_blank">View Certificate</a>
+                                <a href="https://coursera.org/verify/YK7FFUZAMCTF" target="_blank">View Certificate</a>
                             </div>
                             <div class="certification-item">
                                 <h4>Narrative Economics</h4>
                                 <p>Yale University | Sep 2024</p>
-                                <a href="links/cert-narrative-economics.pdf" target="_blank">View Certificate</a>
+                                <a href="https://coursera.org/share/65a2e6eed951316f110a5a54b2e00b9c" target="_blank">View Certificate</a>
                             </div>
                             <div class="certification-item">
                                 <h4>Financial Markets (with Honors)</h4>
                                 <p>Yale University | Jan 2024</p>
-                                <a href="links/cert-financial-markets.pdf" target="_blank">View Certificate</a>
+                                <a href="https://coursera.org/share/da5ff560bbff2f0ac293fc8b1588c97d" target="_blank">View Certificate</a>
                             </div>
                             <div class="certification-item">
                                 <h4>Introduction to American Law</h4>
                                 <p>University of Pennsylvania | Aug 2023</p>
-                                <a href="links/cert-american-law.pdf" target="_blank">View Certificate</a>
+                                <a href="https://coursera.org/share/27de247659638bbccdeab2a74ea9a637" target="_blank">View Certificate</a>
                             </div>
                         </div>
                     </div>
