--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <!-- Navigation -->
+    <!--Gang -->
     <nav class="nav" id="navigation">
         <div class="nav-container">
             <div class="nav-brand">
