--- a/index.html
+++ b/index.html
@@ -32,143 +32,144 @@
         </div>
     </nav>
 
-    <!-- Page Content -->
-    <main class="main-content">
-        <!-- Home Page -->
-        <section class="page bloomberg-theme" id="home" data-theme="bloomberg">
-            <div class="hero-section">
-                <div class="hero-content">
-                    <h1 class="hero-title" id="hero-title">GAJANAN BARVE</h1>
-                    <div class="hero-subtitle">
-                        <span class="ticker-text">Finance × Law × Technology</span>
-                    </div>
-                    <p class="hero-description">Computer Science & Business Systems Student | Class of 2027</p>
+   <!-- Page Content -->
+<main class="main-content">
+    <!-- Home Page -->
+    <section class="page bloomberg-theme" id="home" data-theme="bloomberg">
+        <div class="hero-section">
+            <div class="hero-content">
+                <h1 class="hero-title" id="hero-title">GAJANAN BARVE</h1>
+                <div class="hero-subtitle">
+                    <span class="ticker-text">Finance × Law × Technology</span>
+                </div>
+                <p class="hero-description">Computer Science & Business Systems Student | Class of 2027</p>
+            </div>
+        </div>
+
+        <div class="stats-dashboard">
+            <div class="stats-grid">
+                <div class="stat-card">
+                    <div class="stat-value">9.4</div>
+                    <div class="stat-label">Current CGPA (SY)</div>
+                </div>
+                <div class="stat-card">
+                    <div class="stat-value">4</div>
+                    <div class="stat-label">Books Published</div>
+                </div>
+                <div class="stat-card">
+                    <div class="stat-value">6</div>
+                    <div class="stat-label">Research Papers</div>
+                </div>
+                <div class="stat-card">
+                    <div class="stat-value">4</div>
+                    <div class="stat-label">Internships</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="content-section">
+            <div class="about-section">
+                <h2 class="section-title">About Me</h2>
+                <div class="about-content">
+                    <p>Third-year Computer Science & Business Systems student at JSPM's Rajarshi Shahu College of Engineering with a passion for quantitative finance, legal technology, and algorithmic solutions. I bridge the gap between technical innovation and business strategy, with extensive experience in investment banking, securities lending, and policy research.</p>
+                    <p>My career objective is to leverage my interdisciplinary knowledge in computer science, finance, and law to drive innovation in fintech and legal technology sectors.</p>
                 </div>
             </div>
 
-            <div class="stats-dashboard">
-                <div class="stats-grid">
-                    <div class="stat-card">
-                        <div class="stat-value">9.4</div>
-                        <div class="stat-label">Current CGPA (SY)</div>
-                    </div>
-                    <div class="stat-card">
-                        <div class="stat-value">4</div>
-                        <div class="stat-label">Books Published</div>
-                    </div>
-                    <div class="stat-card">
-                        <div class="stat-value">6</div>
-                        <div class="stat-label">Research Papers</div>
-                    </div>
-                    <div class="stat-card">
-                        <div class="stat-value">4</div>
-                        <div class="stat-label">Internships</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="content-section">
-                <div class="about-section">
-                    <h2 class="section-title">About Me</h2>
-                    <div class="about-content">
-                        <p>Third-year Computer Science & Business Systems student at JSPM's Rajarshi Shahu College of Engineering with a passion for quantitative finance, legal technology, and algorithmic solutions. I bridge the gap between technical innovation and business strategy, with extensive experience in investment banking, securities lending, and policy research.</p>
-                        <p>My career objective is to leverage my interdisciplinary knowledge in computer science, finance, and law to drive innovation in fintech and legal technology sectors.</p>
-                    </div>
-                </div>
-
-                <div class="skills-section">
-                    <h2 class="section-title">Skills & Expertise</h2>
-                    <div class="skills-grid">
-                        <div class="skill-category">
-                            <h3>Programming Languages</h3>
-                            <div class="skill-tags">
-                                <span class="skill-tag">Python</span>
-                                <span class="skill-tag">Java</span>
-                                <span class="skill-tag">C++</span>
-                                <span class="skill-tag">R</span>
-                            </div>
-                        </div>
-                        <div class="skill-category">
-                            <h3>Languages Known</h3>
-                            <div class="skill-tags">
-                                <span class="skill-tag">English (Fluent)</span>
-                                <span class="skill-tag">Hindi (Fluent)</span>
-                                <span class="skill-tag">Marathi (Native)</span>
-                                <span class="skill-tag">French (Intermediate)</span>
-                            </div>
-                        </div>
-                        <div class="skill-category">
-                            <h3>Tools & Platforms</h3>
-                            <div class="skill-tags">
-                                <span class="skill-tag">Microsoft Excel</span>
-                                <span class="skill-tag">PowerPoint</span>
-                                <span class="skill-tag">Word</span>
-                                <span class="skill-tag">Git</span>
-                                <span class="skill-tag">Bloomberg Terminal</span>
-                                <span class="skill-tag">LSEG (London Stock Exchange Workspace)</span>
-                                <span class="skill-tag">Koyfin</span>
-                            </div>
-                        </div>
-                        <div class="skill-category">
-                            <h3>Domain Expertise</h3>
-                            <div class="skill-tags">
-                                <span class="skill-tag">Quantitative Finance</span>
-                                <span class="skill-tag">Investment Banking</span>
-                                <span class="skill-tag">Securities Lending</span>
-                                <span class="skill-tag">American Law</span>
-                                <span class="skill-tag">Legal Research</span>
-                                <span class="skill-tag">Policy Analysis</span>
-                                <span class="skill-tag">Algorithm Development</span>
-                                <span class="skill-tag">Data Analytics</span>
-                                <span class="skill-tag">Automation</span>
-                            </div>
+            <div class="skills-section">
+                <h2 class="section-title">Skills & Expertise</h2>
+                <div class="skills-grid">
+                    <div class="skill-category">
+                        <h3>Programming Languages</h3>
+                        <div class="skill-tags">
+                            <span class="skill-tag">Python</span>
+                            <span class="skill-tag">Java</span>
+                            <span class="skill-tag">C++</span>
+                            <span class="skill-tag">R</span>
                         </div>
                     </div>
-                </div>
-
-                <div class="projects-section">
-                    <h2 class="section-title">Featured Projects</h2>
-                    <div class="projects-grid">
-                        <div class="project-card" data-project="wind-turbine">
-                            <h3>Maximizing Wind Turbine Performance</h3>
-                            <p class="project-duration">Feb 2025 - Mar 2025</p>
-                            <p>Developed theoretical framework for auxiliary motor system that assists wind turbines during startup</p>
-                            <div class="project-tech">Mathematical modeling, Theoretical analysis</div>
+                    <div class="skill-category">
+                        <h3>Languages Known</h3>
+                        <div class="skill-tags">
+                            <span class="skill-tag">English (Fluent)</span>
+                            <span class="skill-tag">Hindi (Fluent)</span>
+                            <span class="skill-tag">Marathi (Native)</span>
+                            <span class="skill-tag">French (Intermediate)</span>
                         </div>
-                        <div class="project-card" data-project="noise-automation">
-                            <h3>Automating Noise Complaining</h3>
-                            <p class="project-duration">Feb 2024 - Apr 2024</p>
-                            <p>Designed algorithm to automate noise complaint handling using decibel meters and mobile phone integration</p>
-                            <div class="project-tech">Mobile development, Algorithm design, Statistical analysis</div>
+                    </div>
+                    <div class="skill-category">
+                        <h3>Tools & Platforms</h3>
+                        <div class="skill-tags">
+                            <span class="skill-tag">Microsoft Excel</span>
+                            <span class="skill-tag">PowerPoint</span>
+                            <span class="skill-tag">Word</span>
+                            <span class="skill-tag">Git</span>
+                            <span class="skill-tag">Bloomberg Terminal</span>
+                            <span class="skill-tag">LSEG (London Stock Exchange Workspace)</span>
+                            <span class="skill-tag">Koyfin</span>
                         </div>
-                        <div class="project-card" data-project="power-allocation">
-                            <h3>Power Allocation Optimization</h3>
-                            <p class="project-duration">Jan 2024 - Feb 2024</p>
-                            <p>Priority-based algorithm for power allocation during urban overload scenarios</p>
-                            <div class="project-tech">C++, Algorithms, Power systems</div>
-                        </div>
-                        <div class="project-card" data-project="smart-shoe">
-                            <h3>Smart Shoe with Wireless Data</h3>
-                            <p class="project-duration">Sep 2023 - Dec 2023</p>
-                            <p>Step counter embedded in shoe with Arduino and wireless communication capabilities</p>
-                            <div class="project-tech">Arduino, ADXL335, MPU6050, BMP280, HC-05, LoRa</div>
-                        </div>
-                        <div class="project-card" data-project="banking-automation">
-                            <h3>Automating Back Office Operations</h3>
-                            <p class="project-duration">2024</p>
-                            <p>Automation of repetitive banking operations to increase efficiency</p>
-                            <div class="project-tech">Python, Banking systems</div>
-                        </div>
-                        <div class="project-card" data-project="securities-lending">
-                            <h3>A Novel Approach to Securities Lending</h3>
-                            <p class="project-duration">2024</p>
-                            <p>Financial research and algorithm design for securities lending optimization</p>
-                            <div class="project-tech">Research tools, Financial modeling</div>
+                    </div>
+                    <div class="skill-category">
+                        <h3>Domain Expertise</h3>
+                        <div class="skill-tags">
+                            <span class="skill-tag">Quantitative Finance</span>
+                            <span class="skill-tag">Investment Banking</span>
+                            <span class="skill-tag">Securities Lending</span>
+                            <span class="skill-tag">American Law</span>
+                            <span class="skill-tag">Legal Research</span>
+                            <span class="skill-tag">Policy Analysis</span>
+                            <span class="skill-tag">Algorithm Development</span>
+                            <span class="skill-tag">Data Analytics</span>
+                            <span class="skill-tag">Automation</span>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+
+            <div class="projects-section">
+                <h2 class="section-title">Featured Projects</h2>
+                <div class="projects-grid">
+                    <a href="#" class="project-card" data-project="wind-turbine">
+                        <h3>Maximizing Wind Turbine Performance</h3>
+                        <p class="project-duration">Feb 2025 - Mar 2025</p>
+                        <p>Developed theoretical framework for auxiliary motor system that assists wind turbines during startup</p>
+                        <div class="project-tech">Mathematical modeling, Theoretical analysis</div>
+                    </a>
+                    <a href="#" class="project-card" data-project="noise-automation">
+                        <h3>Automating Noise Complaining</h3>
+                        <p class="project-duration">Feb 2024 - Apr 2024</p>
+                        <p>Designed algorithm to automate noise complaint handling using decibel meters and mobile phone integration</p>
+                        <div class="project-tech">Mobile development, Algorithm design, Statistical analysis</div>
+                    </a>
+                    <a href="#" class="project-card" data-project="power-allocation">
+                        <h3>Power Allocation Optimization</h3>
+                        <p class="project-duration">Jan 2024 - Feb 2024</p>
+                        <p>Priority-based algorithm for power allocation during urban overload scenarios</p>
+                        <div class="project-tech">C++, Algorithms, Power systems</div>
+                    </a>
+                    <a href="#" class="project-card" data-project="smart-shoe">
+                        <h3>Smart Shoe with Wireless Data</h3>
+                        <p class="project-duration">Sep 2023 - Dec 2023</p>
+                        <p>Step counter embedded in shoe with Arduino and wireless communication capabilities</p>
+                        <div class="project-tech">Arduino, ADXL335, MPU6050, BMP280, HC-05, LoRa</div>
+                    </a>
+                    <a href="#" class="project-card" data-project="banking-automation">
+                        <h3>Automating Back Office Operations</h3>
+                        <p class="project-duration">2024</p>
+                        <p>Automation of repetitive banking operations to increase efficiency</p>
+                        <div class="project-tech">Python, Banking systems</div>
+                    </a>
+                    <a href="#" class="project-card" data-project="securities-lending">
+                        <h3>A Novel Approach to Securities Lending</h3>
+                        <p class="project-duration">2024</p>
+                        <p>Financial research and algorithm design for securities lending optimization</p>
+                        <div class="project-tech">Research tools, Financial modeling</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
         <!-- Academics Page -->
         <section class="page bloomberg-theme hidden" id="academics" data-theme="bloomberg">
