Add links and goals section to index.html
Added a new section for links and goals.

--- a/index.html
+++ b/index.html
@@ -565,6 +565,18 @@
                         </div>
                     </div>
                 </div>
+                <section id="links">
+  <ul>
+    <li><a href="https://github.com/thebenmerlin/portfolio/">Portfolio (Projects)</a></li>
+    <li><a href="https://github.com/thebenmerlin/certificates/">Research Papers & Certificates</a></li>
+  </ul>
+  <h3>Goals</h3>
+  <ul>
+    <li><strong>Short Term Goal:</strong> Publish two peer-reviewed research papers by Q2 2026 and enhance technical portfolio with AI-driven dashboards</li>
+    <li><strong>Long Term Goal:</strong> Secure a research or development position in a top-tier financial technology or defense organization and develop patentable software innovations by 2030</li>
+  </ul>
+</section>
+
 
                 <div class="contact-section">
                     <h3>Contact Information</h3>
