--- a/index.html
+++ b/index.html
@@ -565,11 +565,7 @@
                         </div>
                     </div>
                 </div>
-                <section id="links">
-  <ul>
-    <li><a href="https://github.com/thebenmerlin/portfolio/">Portfolio (Projects)</a></li>
-    <li><a href="https://github.com/thebenmerlin/certificates/">Research Papers & Certificates</a></li>
-  </ul>
+<section id="links" style="color: black;">
   <h3>Goals</h3>
   <ul>
     <li><strong>Short Term Goal:</strong> Publish two peer-reviewed research papers by Q2 2026 and enhance technical portfolio with AI-driven dashboards</li>
